# PATGAN

./: .gitignore  Dockerfile  Dockerfile.txt  README.md  docker-compose.yml  pyproject.toml
Real-ESRGAN/: inference_realesrgan.py
Real-ESRGAN/options/: train_realesrgan_x2_patches.yml  train_realesrnet_x2_patches.yml
Real-ESRGAN/realesrgan.egg-info/: PKG-INFO  SOURCES.txt
Real-ESRGAN/realesrgan/data/: realesrgan_paired_dataset.py
Real-ESRGAN/scripts/: generate_meta_info_pairdata.py
UNET_benchmark/: Load_Data.py  inference.py  test.py  train_sinograms.py  unet.py
UNET_benchmark/util/: loggers.py  wandb_logger.py
scripts/data_analysis/: compare_models.py  evaluate_performance.py  evaluate_testing_images.py  plot_collages.py  plot_results.py
scripts/data_curation/: curated_test_relpath.txt  curated_train_relpath.txt  curated_val_relpath.txt  data_curation.py
scripts/data_generation_python/: TOA.py  downgrade_sinograms.py  main_matrix_generation.py  main_matrix_recon.py  patches2sino.py
