[tool.poetry]
name = "pat_gan"
version = "0.1.0"
description = ""
authors = ["delfimontilla"]

[tool.poetry.dependencies]
python = "3.8.10"
basicsr = ">=1.3.3.11"
torch = ">=1.7"
torchvision = "^0.14.0"
opencv-python = ">=4.6"
matplotlib = "^3.6.2"
pandas = "^1.5.2"
pydicom = "^2.3.1"
tqdm = "^4.64.1"
scikit-learn = "^1.2.1"
scikit-image = "^0.19.3"
natsort = "^8.2.0"
numpy = "^1.23.1"
Pillow = "^9.2.0"
scipy = "^1.9.1"
h5py = "^3.7.0"
patchify = "^0.2.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
